[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=3.0.0,<5", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "catppuccin-jupyterlab"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
version = "0.2.4"
description = "📊 Soothing pastel theme for JupyterLab."
authors = [{ name = "Gabriel Magno", email = "gabrielmagno1@gmail.com" }]
keywords = ["jupyter", "jupyterlab", "jupyterlab-extension"]
urls = { homepage = "https://github.com/catppuccin/jupyterlab" }
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.targets.sdist]
artifacts = ["catppuccin_jupyterlab/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"catppuccin_jupyterlab/labextension" = "share/jupyter/labextensions/catppuccin_jupyterlab"
"install.json" = "share/jupyter/labextensions/catppuccin_jupyterlab/install.json"

[tool.hatch.build.hooks.version]
path = "catppuccin_jupyterlab/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "catppuccin_jupyterlab/labextension/package.json",
]
skip-if-exists = ["catppuccin_jupyterlab/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "catppuccin_jupyterlab/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=3.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
